--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "iyt": "bin/iyt.js"
   },
   "dependencies": {
+    "async": "^1.0.0",
     "commander": "^2.8.1",
+    "js-combinatorics": "^0.5.0",
     "request": "^2.55.0"
   }
 }
