--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
   },
   "dependencies": {
     "async": "^1.0.0",
+    "chalk": "^1.0.0",
     "cheerio": "^0.19.0",
     "commander": "^2.8.1",
+    "fs-extra": "^0.18.4",
     "js-combinatorics": "^0.5.0",
     "lodash": "^3.9.3",
     "request": "^2.55.0"
